# wasm-engine

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: auto-release.yml
src/: capabilities.rs  main.rs  url.rs  wasi.rs
